# fake-webcam

./: .gitignore  Makefile  README.md  build.sbt  fw.sh  imagemagick.py  install.sh  numbers.sh  output.mkv  print.sh  pyproject.toml  record.avi  requirements.txt  setup.py  switch-rx.py  switch.py  words.sh
fakewebcam/: README.md  __init__.py  common.py  emulator-with-fake-webcam  fake-webcam.py  fakewebcam.py  imagemagick.py  make-video  qrcode.py  qrcode2.py  server.py  testfakewebcamwithorders.py  version.py
fakewebcam/data/: index.html
make/: arch.mk
project/: Dependencies.scala  Versions.scala  better-monadic-for.sbt  context-applied.sbt  kind-projector.sbt  native-packager.sbt
scripts/: fake-webcam
src/fakewebcam/: run.py
src/fakewebcam/animation/: __init__.py  bounce.py  bouncingimage.py
src/fakewebcam/camera/: __init__.py  camera.py  recording.py
src/fakewebcam/click/: __init__.py  camera.py
src/fakewebcam/client/: __init__.py  __main__.py  camera.py  camerarecorder.py  fakecamera.py  fakecameraplayer.py  player.py  recording.py  run.py
src/fakewebcam/common/: __init__.py  backandforth.py  coordinates.py  fromqueue.py  position.py  printframeindex.py  throttledrepeatvalue.py
src/fakewebcam/core/: __init__.py  __main__.py  camera.py  e2e.py  editor.py  effect.py  (+11 more)
tests/: test_animation.py  test_camera.py  test_editing.py  test_editor.py  test_fakecamera.py  test_fakewebcam.py  test_image.py  test_switchoperator.py  test_video.py
tests/effect/: runner.py  test_image.py-BACKUP  test_overlay.py  test_video.py
tests/video/: test_video.py
(+107 files in other folders)
