[tool.poetry]
name = "fakewebcam"
version = "0.1.0"
description = ""
authors = ["Adrien"]

[tool.poetry.dependencies]
python = "^3.8"
pyudev = "^0.22.0"
numpy = "^1.18.5"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
fake-webcam = "fakewebcam.client:run"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

