[tool.poetry]
name = "fakewebcam"
version = "0.1.0"
description = ""
authors = ["Adrien"]

[tool.poetry.dependencies]
python = "^3.6"
pyudev = "^0.22.0"
numpy = "^1.18.5"
opencv-python = "^4.2.0"
dbus-python = "^1.2.16"
mediainfo = "^0.0.8"
rx = "^3.1.0"
pygobject = "^3.36.1"
click = "^7.1.2"
svglib = "^1.0.0"
cairosvg = "^2.4.2"
easing-functions = "^1.0.3"

[tool.poetry.dev-dependencies]
pylint = "^2.5.3"

[tool.poetry.scripts]
fake-webcam = "fakewebcam:run"

[tool.dephell.main]
from = {format = "poetry", path = "pyproject.toml"}
to = {format = "setuppy", path = "setup.py"}
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

